@@ -94,10 +94,7 @@ void IMAPConnection::connect()
 	}
 
 	// Create and connect the socket
-	socketFactory* sf = platformDependant::getHandler()->
-		getSocketFactory(GET_PROPERTY(string, PROPERTY_SERVER_SOCKETFACTORY));
-
-	m_socket = sf->create();
+	m_socket = m_store->getSocketFactory()->create();
 
 #if VMIME_HAVE_TLS_SUPPORT
 	if (m_store->isSecuredConnection())  // dedicated port/IMAPS
