@@ -61,7 +61,6 @@ const IMAPServiceInfos::props& IMAPServiceInfos::getProperties() const
 
 		property(serviceInfos::property::SERVER_ADDRESS, serviceInfos::property::FLAG_REQUIRED),
 		property(serviceInfos::property::SERVER_PORT, "143"),
-		property(serviceInfos::property::SERVER_SOCKETFACTORY),
 
 		property(serviceInfos::property::TIMEOUT_FACTORY)
 	};
@@ -85,7 +84,6 @@ const IMAPServiceInfos::props& IMAPServiceInfos::getProperties() const
 
 		property(serviceInfos::property::SERVER_ADDRESS, serviceInfos::property::FLAG_REQUIRED),
 		property(serviceInfos::property::SERVER_PORT, "993"),
-		property(serviceInfos::property::SERVER_SOCKETFACTORY),
 
 		property(serviceInfos::property::TIMEOUT_FACTORY)
 	};
@@ -119,7 +117,6 @@ const std::vector <serviceInfos::property> IMAPServiceInfos::getAvailablePropert
 
 	list.push_back(p.PROPERTY_SERVER_ADDRESS);
 	list.push_back(p.PROPERTY_SERVER_PORT);
-	list.push_back(p.PROPERTY_SERVER_SOCKETFACTORY);
 
 	list.push_back(p.PROPERTY_TIMEOUT_FACTORY);
 
