@@ -63,7 +63,6 @@ const POP3ServiceInfos::props& POP3ServiceInfos::getProperties() const
 
 		property(serviceInfos::property::SERVER_ADDRESS, serviceInfos::property::FLAG_REQUIRED),
 		property(serviceInfos::property::SERVER_PORT, "110"),
-		property(serviceInfos::property::SERVER_SOCKETFACTORY),
 
 		property(serviceInfos::property::TIMEOUT_FACTORY)
 	};
@@ -89,7 +88,6 @@ const POP3ServiceInfos::props& POP3ServiceInfos::getProperties() const
 
 		property(serviceInfos::property::SERVER_ADDRESS, serviceInfos::property::FLAG_REQUIRED),
 		property(serviceInfos::property::SERVER_PORT, "995"),
-		property(serviceInfos::property::SERVER_SOCKETFACTORY),
 
 		property(serviceInfos::property::TIMEOUT_FACTORY)
 	};
@@ -125,7 +123,6 @@ const std::vector <serviceInfos::property> POP3ServiceInfos::getAvailablePropert
 
 	list.push_back(p.PROPERTY_SERVER_ADDRESS);
 	list.push_back(p.PROPERTY_SERVER_PORT);
-	list.push_back(p.PROPERTY_SERVER_SOCKETFACTORY);
 
 	list.push_back(p.PROPERTY_TIMEOUT_FACTORY);
 
