@@ -60,7 +60,7 @@ public:
 	const unsigned int getProcessId() const;
 
 #if VMIME_HAVE_MESSAGING_FEATURES
-	vmime::net::socketFactory* getSocketFactory(const vmime::string& name) const;
+	ref <vmime::net::socketFactory> getSocketFactory() const;
 
 	vmime::net::timeoutHandlerFactory* getTimeoutHandlerFactory(const vmime::string& name) const;
 #endif
@@ -76,7 +76,7 @@ public:
 private:
 
 #if VMIME_HAVE_MESSAGING_FEATURES
-	windowsSocketFactory* m_socketFactory;
+	ref <windowsSocketFactory> m_socketFactory;
 #endif
 
 #if VMIME_HAVE_FILESYSTEM_FEATURES
